--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
         /* Navigation */
         nav {
-<<<<<<< HEAD
             position: fixed;
             top: 0;
             left: 0;
@@ -56,25 +55,17 @@
             display: flex;
             align-items: center;
             justify-content: center;
-=======
-            background-color: rgba(255, 255, 255, 0.95);
-            padding: 1.2rem;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
->>>>>>> 18f8d60a7fb93faa2aae4c2768aa6be9bcd04e2b
             transition: all 0.3s ease;
+            margin-left: 1rem;
         }
 
         nav ul {
             list-style: none;
             display: flex;
-<<<<<<< HEAD
             gap: 1.5rem;
             margin: 0;
             padding: 0;
+            margin-right: auto;
         }
 
         nav ul li a {
@@ -82,12 +73,6 @@
             text-decoration: none;
             font-size: 0.9rem;
             transition: color 0.3s ease;
-=======
-            justify-content: center;
-            gap: 3rem;
-            max-width: 1200px;
-            margin: 0 auto;
->>>>>>> 18f8d60a7fb93faa2aae4c2768aa6be9bcd04e2b
         }
 
         nav a {
@@ -613,7 +598,6 @@
                 opacity: 1;
             }
         }
-<<<<<<< HEAD
 
         /* Mobile Responsive Styles */
         @media (max-width: 768px) {
@@ -646,20 +630,18 @@
                 font-size: 0.75rem;
             }
         }
-=======
->>>>>>> 18f8d60a7fb93faa2aae4c2768aa6be9bcd04e2b
     </style>
 </head>
 <body>
     <nav>
         <div class="nav-container">
-            <a href="#" class="logo">JK</a>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
                 <li><a href="#care">Care Guide</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <a href="#" class="logo">C</a>
         </div>
     </nav>
 
