--- a/index.html
+++ b/index.html
@@ -163,19 +163,23 @@
                 <div class="form-group">
                     <label for="cardNumber">Card Number</label>
                     <input type="text" id="cardNumber" placeholder="1234 5678 9012 3456" required>
+                    <span class="error-message" id="cardNumberError"></span>
                 </div>
                 <div class="form-group">
                     <label for="cardName">Cardholder Name</label>
                     <input type="text" id="cardName" placeholder="John Doe" required>
+                    <span class="error-message" id="cardNameError"></span>
                 </div>
                 <div class="form-row">
                     <div class="form-group">
                         <label for="expiryDate">Expiry Date <span class="hint">(MM/YY)</span></label>
                         <input type="text" id="expiryDate" placeholder="MM/YY" required>
+                        <span class="error-message" id="expiryDateError"></span>
                     </div>
                     <div class="form-group">
                         <label for="cvv">CVV</label>
                         <input type="text" id="cvv" placeholder="123" required>
+                        <span class="error-message" id="cvvError"></span>
                     </div>
                 </div>
                 <button type="submit" class="payment-button">Complete Purchase</button>
